Fix bug: Cursor overlaps with text in omnibox when window is dragged

The cursor location used to get updated after the dragging event is over, 
so the cursor shows in the previous location for some time before jumping 
to the new location as shown in the bug. In this fix, Textfield::OnBoundsChanged 
will trigger location updating for text cursor as well. 

TEXT=TextfieldTest.TextfieldBoundsChangeTest

Bug: 734988
Change-Id: Idbc05e59b8b97f76ec9d70b5c99b887e69798fda
Reviewed-on: https://chromium-review.googlesource.com/559591
Commit-Queue: Yi Xu <yiyix@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#484422}
Former-commit-id: daf838dca867613a3f7dc9fa915b14b6245da83e